prost-canonical-serde/tests/ui/tag_on_transparent_struct.stderr
error: tag is only supported on structs with named fields
 --> tests/ui/tag_on_transparent_struct.rs:6:1
  |
6 | #[serde(tag = "type")]
  | ^
